Cards update after saving newCard

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="wordcards are flashcards that help you to train your norwegian vocabulary"
       content="Wordcards Vocabulary Trainer"
     />
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
+
     <link rel="stylesheet" href="../src/index.css">
        <title>Wordcards</title>
   </head>
